--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@auth0/angular-jwt": "^2.0.0",
     "angular-jwt": "^0.1.10",
     "core-js": "^2.5.4",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
