--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               },
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/alertifyjs/build/alertify.min.js"
+            ]
           },
           "configurations": {
             "production": {
