--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.0.3",
     "@auth0/angular-jwt": "^2.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "alertifyjs": "^1.11.2",
     "angular-jwt": "^0.1.10",
     "core-js": "^2.5.4",
     "ng2-file-upload": "^1.3.0",
